name:                Haskell-Programming-Book
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Cmdv/Haskell-Programming-Book#readme
license:             BSD3
license-file:        LICENSE
author:              Vincent Orr
maintainer:          info@cmdv.me
copyright:           2018
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Haskell-Programming-Book
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , time
                     , hspec
                     , QuickCheck
                     , checkers